--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
+    "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.3",
     "vuetify": "npm:@vuetify/nightly@next",
     "vuex": "^4.0.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
@@ -42,7 +45,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "jest": "^27.0.5",
+    "jest": "^27.5.1",
     "prettier": "^2.4.1",
     "sass": "^1.38.0",
     "sass-loader": "^10.0.0",
