--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
+    "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuetify": "npm:@vuetify/nightly@next",
     "vuex": "^4.0.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
