--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.16.7",
+    "@cypress/vue": "^3.1.0",
+    "@cypress/webpack-dev-server": "^1.8.4",
     "@mdi/font": "5.9.55",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "cypress": "^9.5.4",
+    "eslint-plugin-cypress": "^2.12.1",
     "roboto-fontface": "*",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.13",
