--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cypress/vue": "^3.1.0",
     "@cypress/webpack-dev-server": "^1.8.4",
     "@mdi/font": "5.9.55",
+    "@mdi/js": "^6.6.96",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "cypress": "^9.5.4",
