--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
     "@types/jest": "^27.0.1",
+    "@types/node": "^17.0.30",
     "@types/webfontloader": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
