--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,10 +3,6 @@ image: node:latest
 stages:
   - build
   - verify
-
-cache:
-  paths:
-    - node_modules/
     
 build:
   stage: build
@@ -29,13 +25,16 @@ lint:
     - npm ci
     - npx vue-cli-service lint --no-fix
 
-test:
+integration-test:
   stage: verify
   only:
     - main
     - dev
     - merge_requests
   script:
-    - echo "Running tests"
+    - echo "Running Cypress Integration Tests"
+    - apt-get update
+    - apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
     - npm ci
-    - npm run test:unit
+    - npm run serve &
+    - npx cypress run
