--- a/package.json
+++ b/package.json
@@ -1,64 +1,67 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve ",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "@babel/preset-typescript": "^7.16.7",
-    "@cypress/vue": "^3.1.0",
-    "@cypress/webpack-dev-server": "^1.8.4",
-    "@mdi/font": "5.9.55",
-    "@mdi/js": "^6.6.96",
-    "axios": "^0.26.1",
-    "core-js": "^3.8.3",
-    "cypress": "^9.5.4",
-    "eslint-plugin-cypress": "^2.12.1",
-    "roboto-fontface": "*",
-    "vee-validate": "^4.5.11",
-    "vue": "^3.2.13",
-    "vue-axios": "^3.4.1",
-    "vue-router": "^4.0.3",
-    "vue3-cookies": "^1.0.6",
-    "vuetify": "npm:@vuetify/nightly@^3.0.0-next-20220422.0",
-    "vuex": "^4.0.0",
-    "webfontloader": "^1.0.0",
-    "yup": "^0.32.11"
-  },
-  "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.3",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^17.0.30",
-    "@types/webfontloader": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-unit-jest": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "@vue/test-utils": "^2.0.0-0",
-    "@vue/vue3-jest": "^27.0.0-alpha.1",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.0.6",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "jest": "^27.5.1",
-    "prettier": "^2.4.1",
-    "sass": "^1.38.0",
-    "sass-loader": "^10.0.0",
-    "ts-jest": "^27.1.4",
-    "typescript": "~4.5.5",
-    "vue-cli-plugin-vuetify": "~2.4.8",
-    "vuetify-loader": "^2.0.0-alpha.0"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve ",
+        "build": "vue-cli-service build",
+        "test:unit": "vue-cli-service test:unit",
+        "lint": "vue-cli-service lint"
+    },
+    "dependencies": {
+        "@babel/preset-typescript": "^7.16.7",
+        "@cypress/vue": "^3.1.0",
+        "@cypress/webpack-dev-server": "^1.8.4",
+        "@mdi/font": "^5.9.55",
+        "@mdi/js": "^6.6.96",
+        "axios": "^0.26.1",
+        "core-js": "^3.8.3",
+        "cypress": "^9.5.4",
+        "eslint-plugin-cypress": "^2.12.1",
+        "roboto-fontface": "*",
+        "sockjs-client": "^1.6.0",
+        "vee-validate": "^4.5.11",
+        "vue": "^3.2.13",
+        "vue-axios": "^3.4.1",
+        "vue-router": "^4.0.3",
+        "vue3-cookies": "^1.0.6",
+        "vuetify": "npm:@vuetify/nightly@^3.0.0-next-20220422.0",
+        "vuex": "^4.0.0",
+        "webfontloader": "^1.0.0",
+        "webstomp-client": "^1.2.6",
+        "yup": "^0.32.11"
+    },
+    "devDependencies": {
+        "@nuxtjs/vuetify": "^1.12.3",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^17.0.30",
+        "@types/sockjs-client": "^1.5.1",
+        "@types/webfontloader": "^1.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.4.0",
+        "@typescript-eslint/parser": "^5.4.0",
+        "@vue/cli-plugin-babel": "~5.0.0",
+        "@vue/cli-plugin-eslint": "~5.0.0",
+        "@vue/cli-plugin-router": "~5.0.0",
+        "@vue/cli-plugin-typescript": "~5.0.0",
+        "@vue/cli-plugin-unit-jest": "~5.0.0",
+        "@vue/cli-plugin-vuex": "~5.0.0",
+        "@vue/cli-service": "~5.0.0",
+        "@vue/eslint-config-typescript": "^9.1.0",
+        "@vue/test-utils": "^2.0.0-0",
+        "@vue/vue3-jest": "^27.0.0-alpha.1",
+        "babel-eslint": "^10.1.0",
+        "babel-jest": "^27.0.6",
+        "eslint": "^7.32.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-vue": "^8.0.3",
+        "jest": "^27.5.1",
+        "prettier": "^2.4.1",
+        "sass": "^1.38.0",
+        "sass-loader": "^10.0.0",
+        "ts-jest": "^27.1.4",
+        "typescript": "~4.5.5",
+        "vue-cli-plugin-vuetify": "~2.4.8",
+        "vuetify-loader": "^2.0.0-alpha.0"
+    }
 }
