--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@babel/preset-typescript": "^7.16.7",
         "@cypress/vue": "^3.1.0",
         "@cypress/webpack-dev-server": "^1.8.4",
+        "@fawmi/vue-google-maps": "^0.9.67",
         "@mdi/font": "^5.9.55",
         "@mdi/js": "^6.6.96",
         "axios": "^0.26.1",
