--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: node:latest
 stages:
   - build
   - verify
+  - pages
     
 build:
   stage: build
@@ -38,3 +39,20 @@ integration-test:
     - npm ci
     - npm run serve &
     - npx cypress run
+    - npx nyc report --reporter=text-summary
+  artifacts:
+    when: always
+    paths:
+      - coverage
+
+pages:
+  stage: pages
+  script:
+    - rm -rf public/cypress
+    - mkdir public/cypress
+    - cp -r coverage/lcov-report/* public/cypress/
+  artifacts:
+    paths:
+      - public
+  only:
+    - main
